2017-11-03 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- feature #69 parse tick positions using math parser
	- new feature #68: programmatic access to axis coordinates for given canvas coordinates (\pgfplotspointgetcoordinates)

2017-10-21 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- \addplot gnuplot: autodetected unbounded coordinates

2017-09-16 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed #183: Nan in the first line of a numeric table was interpreted as column name

2017-08-12 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
	
	- fixed #111 [fillbetween] strange behavior when `soft clip` is used and one of the paths touches the axis border

2017-06-05 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- RELEASED VERSION 1.15

2017-06-05 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
	- fixed bug 176: 2d plot expression in 3d axis fails for lualatex 

2017-06-03 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
	
	- improved precision of |.define layer set| (todo remark of Stefan)

2017-04-29 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
	
	- fixed bug 163 [bar-chart] bars dissapear when values are >xmax/ymax 
	- fixed bug 81 cannot use dollar sign as 'comment char'
	- fixed bug 91 Hashes in data 
	- fixed bug 165 [minor ticks] minor tick drawn after the last xtick

2017-03-18 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed bug 150 Usage of \pgfkeysvalueof in xtick leads to 'Dimension too large' 
	- fixed bug 105 [manual] `xticklabel pos=upper` is not documented
	    in fact, some of the documented positions for 'xtick pos' where
		unavailable.
	- fixed bug 155 [groupplots] `scaled ticks` does not recognize `ticklabels at` 
	- fixed bug 160 `xticklabels` also used for `extra x tick labels` if they are not given explicitely 
	- implemented partial solution for bug 154 [log mode] sampling in 2D and 3D different 
	