@@ -44,6 +44,7 @@ HISTORY:
 - fixed bug #111 [fillbetween] strange behavior when `soft clip` is used and one of the paths touches the axis border
 - fixed bug #183: Nan in the first line of a numeric table was interpreted as column name
 - fixed bug #187 Wrong output from mod in axis 
+- fixed bug #109 `visualization depends on` doesn't work with table from pgfplotstable 
 - \addplot gnuplot: autodetected unbounded coordinates
 - new feature: parse tick positions using math parser (tracker #69)
 - new feature: programmatic access to axis coordinates for given canvas coordinates (\pgfplotspointgetcoordinates, tracker 68)
