@@ -732,7 +732,7 @@ This access requires a call to specific macros. These macros write the
 coordinate values to some publicly available key--value pairs. Then, the
 current point's $x$, $y$, $z$, and color data can be accessed.
 
-\begin{command}{\pgfplotspointgetcoordinates}
+\begin{commandlist}{\pgfplotspointgetcoordinates,\pgfplotspointgetcoordinates\marg{point}}
 	A command which returns high-level coordinate values. After invoking the macro, the following keys will be set:
 
     After invoking the macro, the followings keys will be set:
@@ -758,7 +758,7 @@ current point's $x$, $y$, $z$, and color data can be accessed.
 	\end{enumerate}
 
 
-    The returned value are the same as they can be read on the axes, they are
+    The returned values are the same as they can be read on the axes, they are
     also the same as you would write them into |axis cs|.
 
     This means that any |x coord inv trafo| has been applied on the value. It
@@ -842,43 +842,45 @@ current point's $x$, $y$, $z$, and color data can be accessed.
 % requires \usetikzlibrary{intersections}
 \begin{tikzpicture}
 \begin{axis}
-	\addplot [name path=A] {x^3};
+  \addplot [name path=A] {x^3};
 
-	\draw [red,name path=HelperLine]
-		(axis cs:-6,-100) -- (axis cs:6,130);
+  \draw [red,name path=HelperLine]
+      (axis cs:-6,-100) -- (axis cs:6,130);
 
-	\draw [
-		font=\footnotesize,
-		name intersections={%
-			of=A and HelperLine,
-		}
-	] 
-	node[pin={%
-		\pgfplotspointgetcoordinates{(intersection-1)}%
-		$(
-			\pgfmathprintnumber[fixed]{\pgfkeysvalueof{/data point/x}},
-			\pgfmathprintnumber[fixed]{\pgfkeysvalueof{/data point/y}})$
-		}
-	] at (intersection-1) {}
-	node[pin={%
-		\pgfplotspointgetcoordinates{(intersection-2)}%
-		$(
-			\pgfmathprintnumber[fixed]{\pgfkeysvalueof{/data point/x}},
-			\pgfmathprintnumber[fixed]{\pgfkeysvalueof{/data point/y}})$
-		}
-	] at (intersection-2) {};
+  \draw [
+      font=\footnotesize,
+      name intersections={of=A and HelperLine},
+  ] 
+  node[pin={%
+      \pgfplotspointgetcoordinates{(intersection-1)}%
+      $(
+          \pgfmathprintnumber[fixed]
+            {\pgfkeysvalueof{/data point/x}},
+          \pgfmathprintnumber[fixed]
+            {\pgfkeysvalueof{/data point/y}})$
+      }
+  ] at (intersection-1) {}
+  node[pin={%
+      \pgfplotspointgetcoordinates{(intersection-2)}%
+      $(
+          \pgfmathprintnumber[fixed]
+            {\pgfkeysvalueof{/data point/x}},
+          \pgfmathprintnumber[fixed]
+            {\pgfkeysvalueof{/data point/y}})$
+      }
+  ] at (intersection-2) {};
 
 \end{axis}
 \end{tikzpicture}
 \end{codeexample}
-	The example computes and names intersections of |A| and |HelperLine|. The following code generates pins at the intersections. To this end, it uses |\pgfplotspointgetcoordinates|\marg{point} which defines |/data point/x| and |/data point/y|. These values are then formatted using |\pgfmathprintnumber|.
+	The example computes and names intersections of |A| and |HelperLine|. Afterwards, it places |node|s and |pin|s at the intersections and shows the logical coordinates values by means of |\pgfplotspointgetcoordinates|\marg{point}. Since the macro merely computes values without actually displaying anything, we also need to read the results from |/data point/x| and |/data point/y| and format them using |\pgfmathprintnumber|.
 
 	In its second mode, |\pgfplotspointgetcoordinates|\marg{point} expects one of two things as \meta{point}:
 	\begin{enumerate}
 		\item a basic-level PGF point like |\pgfpointanchor{A}{center}| or
 		\item a TikZ point like |(A.center)| or |(3,5)|.
 	\end{enumerate}
-\end{command}
+\end{commandlist}
 
 \begin{command}{\pgfplotspointgetnormalizedcoordinates}
     A macro which is very similar to |\pgfplotspointgetcoordinates|.
