@@ -7,6 +7,16 @@
 \begin{document}
 
 \makeatletter
+{
+	\pgfkeys{/pgf/fpu}
+	\pgfmathdeclarefunction{ABC}{1}{
+		\pgfplotsassertequalstok{aBc}{#1}{}%
+		\def\pgfmathresult{1}%
+	}
+	\pgfmathparse{ABC("aBc")}
+	\pgfplotsassertequalstok{1Y1.0e0]}{\pgfmathresult}{}%
+}
+
 
 \pgfplotsforeachtodomain{-5,-4.5833333,...,5}
 \pgfplotsassertequalstok{{-5:5}{25}}{{\pgfplotsretval}{\pgfplotsretvalb}}{Fail}%
