@@ -44,7 +44,8 @@ HEADER="$HEADER\n%%% Date of this copy: `date` %%%\n\n\n"
 	# $PGFDIR/generic/pgf/frontendlayer/tikz/libraries/tikzexternalshared.code.tex \
 	#--------------------------------------------------
 FILES=(\
-	$PGFDIR/generic/pgf/libraries/luamath/pgflibraryluamath.code.tex \
+	 $PGFDIR/generic/pgf/libraries/pgflibraryfpu.code.tex \
+	 $PGFDIR/generic/pgf/math/pgfmathfloat.code.tex \
 )
 for A in "${FILES[@]}"; do
 	echo "creating compatibility version for `basename $A` ... "
