@@ -114,7 +114,7 @@
 \fi
 
 
-\pgfutil@ifundefined{pgfmathfloatatan2}{
+\pgfutil@ifundefined{pgfmathfloat@stack@push@operand@single@str}{
 	\gdef\pgfplots@glob@TMPa{1}%
 }
 {}%
