@@ -19,7 +19,7 @@
 % with the deployment of this patch or partial content of PGF. Note that the author and/or maintainer of pgfplots has no obligation to fix anything:
 % This file comes without any warranty as the rest of pgfplots; there is no obligation for help.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% Date of this copy: Do 31. Dez 19:01:21 CET 2015 %%%
+%%% Date of this copy: Fr 10. Nov 17:18:26 CET 2017 %%%
 
 
 
@@ -54,13 +54,13 @@
 		\ifpgfmathfloatparseactive
 		\else
 			\pgfutil@ifundefined{pgfmathdeclarefunction}{%
-				% Ohoh - we are running on a TeX distribution with
+				% Ohoh - we are running on a TeX distribution with 
 				% PGF 2.00 which doesn't have the new math engine.
 				% I can provide special treatment here, provided that
 				% all float commands are still able to run (that means
 				% more information needs to be copied from the pgf cvs
 				% to pgf 2.00 - for example pgfmathfloat.code.tex).
-				%
+				% 
 				% I employ this to work with pgfplots and pgf 2.00
 				% using all new features.
 				\pgfmathfloat@parser@install@pgf@two@null@null%
@@ -90,7 +90,7 @@
 			\pgfmathfloatparsenumber{#1}%
 		\fi
 		\let\pgfmathfloatscale=\pgfmathresult%
-	},%
+	},%		
 	% determines the output format of each complete expression parsing
 	% process. If 'scale results' is active, 'fixed' is assumed
 	% automatically.
@@ -192,7 +192,7 @@
 	\pgfutil@namelet{#1}{#2}%
 }
 \def\pgfmathfloat@install@unimplemented#1{%
-	\expandafter\pgfmathfloat@prepareuninstallcmd\csname pgfmath@#1@\endcsname%
+	\expandafter\pgfmathfloat@prepareuninstallcmd\csname pgfmath#1@\endcsname%
 	\expandafter\def\csname pgfmath#1@\endcsname##1{\pgfmathfloat@notimplemented{#1}}%
 }
 \def\pgfmathfloat@plots@install{%
@@ -217,7 +217,7 @@
 	\pgfmathfloat@marshal%
 }
 
-%
+% 
 \def\pgfmathfloat@parser@install@functions{%
 	% Install float commands...
 	%
@@ -288,6 +288,7 @@
 	\expandafter\pgfmathfloat@install\csname pgfmathatan2@\endcsname=\pgfmathfloatatantwo@
 	\pgfmathfloat@install@unimplemented{isprime}%
 	\pgfmathfloat@install@unimplemented{iseven}%
+	\pgfmathfloat@install@unimplemented{isodd}%
 	\pgfmathfloat@install@unimplemented{gcd}%
 	\pgfmathfloat@install@unimplemented{frac}%
 	\pgfmathfloat@install@unimplemented{random}%
@@ -325,6 +326,7 @@
 	\let\pgfmath@basic@parse@exponent=\pgfmath@parse@exponent%
 	\let\pgfmath@basic@stack@push@operand=\pgfmath@stack@push@operand
 	\pgfmathfloat@install\pgfmath@stack@push@operand=\pgfmathfloat@stack@push@operand
+	\pgfmathfloat@install\pgfmath@parse@operand@quote=\pgfmathfloat@parse@operand@quote
 	\pgfmathfloat@install\pgfmath@parse@exponent=\pgfmathfloat@parse@float@or@exponent
 	%
 	\pgfmathfloat@install\pgfmathparse=\pgfmathfloatparse%
@@ -334,7 +336,7 @@
 
 % This here might bring speed improvements... if implemented
 % correctly.
-% However, this heuristics might fail in cases like "1+1" vs "1e+1" ...
+% However, this heuristics might fail in cases like "1+1" vs "1e+1" ... 
 %\def\pgfmathfloat@parse@trynumber@token{numericfpu}
 %\pgfmath@tokens@make{numericfpu}{eE+-Y.0123456789}
 
@@ -350,7 +352,7 @@
 		\noexpand\def\expandafter\noexpand\csname pgfmath@parsefunction@#1\endcsname{%
 			\noexpand\let\noexpand\pgfmath@parsepostgroup\expandafter\noexpand\csname pgfmath@parsefunction@#1@\endcsname%
 			\noexpand\expandafter\noexpand\pgfmath@parse@}%
-		\noexpand\def\expandafter\noexpand\csname pgfmath@parsefunction@#1@\endcsname{%
+		\noexpand\def\expandafter\noexpand\csname pgfmath@parsefunction@#1@\endcsname{%	
 			\noexpand\expandafter\expandafter\noexpand\csname pgfmath#1@\endcsname\noexpand\expandafter{\noexpand\pgfmathresult}%
 			\noexpand\pgfmath@postfunction%
 		}%
@@ -510,6 +512,14 @@
 	\pgfmath@parse@@operator%
 }%
 
+\def\pgfmathfloat@parse@operand@quote#1"{%
+  \edef\pgfmathresult{\pgfmath@fpu@stringmarker #1}%
+  \expandafter\pgfmath@basic@stack@push@operand\expandafter{\pgfmathresult}%
+  \pgfmath@parse@@operator%
+}
+
+\def\pgfmath@fpu@stringmarker{@@str@@:}%
+
 % This extends the functionality of the basic level operand stack: it
 % assures every element on the stack is a float.
 \def\pgfmathfloat@stack@push@operand#1{%
@@ -526,9 +536,18 @@
 	\ifpgfutil@in@
 		\pgfmath@basic@stack@push@operand{#1}%
 	\else
-		\pgfmathfloatparsenumber{#1}%
-		\expandafter\pgfmath@basic@stack@push@operand\expandafter{\pgfmathresult}%
+		\expandafter\pgfutil@in@\expandafter{\pgfmath@fpu@stringmarker}{#1}%
+		\ifpgfutil@in@
+			\pgfmathfloat@stack@push@operand@single@str#1\relax
+		\else
+			\pgfmathfloatparsenumber{#1}%
+			\expandafter\pgfmath@basic@stack@push@operand\expandafter{\pgfmathresult}%
+		\fi
 	\fi
+}%
+
+\expandafter\def\expandafter\pgfmathfloat@stack@push@operand@single@str\pgfmath@fpu@stringmarker #1\relax{%
+	\pgfmath@basic@stack@push@operand{#1}%
 }%
 \def\pgfmathfloat@stack@push@operand@GOBBLE#1\relax{}%
 \def\pgfmathfloat@stack@push@operand@list#1{%
@@ -617,7 +636,7 @@
 	\expandafter\pgfmathfloatparsenumber\expandafter{\pgfmathresult}%
 }
 % Compares #1 with #2 and sets \pgfmathresult either to 1.0 or 0.0.
-%
+% 
 % It also sets the boolean \ifpgfmathfloatcomparison (globally).
 \def\pgfmathfloatlessthan@#1#2{%
 %\def\pgfmathfloatlessthan#1#2#3\and#4#5#6{%
@@ -686,7 +705,7 @@
 \let\pgfmathfloatlessthan=\pgfmathfloatlessthan@
 \let\pgfmathfloatless@=\pgfmathfloatlessthan@
 
-% ! (#1 < #2)  <=>  (#1 >= #2)
+% ! (#1 < #2)  <=>  (#1 >= #2) 
 \def\pgfmathfloatnotless@#1#2{%
 	\pgfmathfloatless@{#1}{#2}%
 	\ifpgfmathfloatcomparison
@@ -695,7 +714,7 @@
 		\def\pgfmathresult{1.0}%
 	\fi
 }%
-% ! (#1 > #2)  <=>  (#1 <= #2)
+% ! (#1 > #2)  <=>  (#1 <= #2) 
 \def\pgfmathfloatnotgreater@#1#2{%
 	\pgfmathfloatless@{#2}{#1}%
 	\ifpgfmathfloatcomparison
@@ -806,7 +825,7 @@
 % Renormalizes #1 to extended precision mantisse, meaning
 % 100 <= m < 1000
 % instead of 1 <= m < 10.
-%
+% 
 % The 'extended precision' means we have higher accuracy when we apply pgfmath operations to mantissas.
 %
 % The input argument is expected to be a normalized floating point number; the output argument is a non-normalized floating point number (well, normalized to extended precision).
@@ -842,7 +861,7 @@
 % Sets extended precision to 10^#1.
 %
 % The different choices are
-%
+% 
 % - 0:  normalization      0 <= m < 1 (disable extended precision)
 % - 1:  normalization     10 <= m < 100
 % - 2:  normalization    100 <= m < 1000  (default)
@@ -873,7 +892,7 @@
 %
 % INPUT:
 % #1  normalized floating point number. Maybe a macro (it will be expanded ONCE)
-%
+% 
 % OUTPUT:
 % - \pgfmathresult : the mantisse in extended precision
 % - \pgfmathfloat@a@S : the sign of #1
@@ -1051,7 +1070,7 @@
 % #1=mantisse which needs to be shifted (with smaller exponent)
 % #2=smaller exponent
 % #3=larger exponent
-%
+% 
 % ATTENTION: this helper method DESTROYS contents of \pgfmathfloat@a@S.
 \def\pgfmathfloatadd@shift#1#2#3{%
 	\pgf@xa=#1 pt%
@@ -1113,7 +1132,7 @@
 \let\pgfmathfloatsubtract=\pgfmathfloatsubtract@
 
 % Scales a floating point number #1 with a fixed point number #2 using pgfmathmultiply.
-%
+% 
 % Use this method if #2 is small number.
 \def\pgfmathfloatmultiplyfixed@#1#2{%
 	\begingroup
@@ -1408,14 +1427,14 @@
 
 % Returns the integer part of the floating point number #1.
 %
-% The result is returned as floating point as well.
+% The result is returned as floating point as well. 
 %
 % This operation is not limited to TeX's range of count registers (it
 % works symbolly)
 %
 % @see \pgfmathfloattoint
-% POSTCONDITION: \pgfmathresult contains the result and
-%	\pgfmathfloatintwasnoop=1 if there was nothing to do
+% POSTCONDITION: \pgfmathresult contains the result and 
+%	\pgfmathfloatintwasnoop=1 if there was nothing to do 
 %   \pgfmathfloatintwasnoop=0 if there where non-zero digits after the period
 %   \pgfmathfloatintwasnoop=2 if there where digits after the period. The digits will be stored in \pgfmathfloatintremainder in this case.
 \def\pgfmathfloatint@#1{%
@@ -1603,7 +1622,7 @@
 		% +infty:.
 		\pgfmathfloatcreate{1}{1.0}{0}%
 	\or
-		% -infty:
+		% -infty: 
 		\pgfmathfloatcreate{2}{1.0}{0}%
 	\fi
 	\pgfmath@smuggleone\pgfmathresult
@@ -1636,8 +1655,14 @@
 %
 \def\pgfmathfloatmod@#1#2{%
 	\begingroup
-	\pgfmathfloatdivide@{#1}{#2}%
-	\pgfmathfloatint@{\pgfmathresult}%
+	\pgfmathfloattoint{#1}%
+	\let\pgfmathfloat@loc@TMPa=\pgfmathresult
+	\pgfmathfloattoint{#2}%
+	\let\pgfmathfloat@loc@TMPb=\pgfmathresult
+	\c@pgfmath@counta=\pgfmathfloat@loc@TMPa\relax
+	\divide\c@pgfmath@counta by\pgfmathfloat@loc@TMPb\relax
+	\expandafter\pgfmathfloatparsenumber\expandafter{\the\c@pgfmath@counta}%
+	%
 	\let\pgfmathfloat@loc@TMPa=\pgfmathresult
 	\pgfmathfloatmultiply@{\pgfmathfloat@loc@TMPa}{#2}%
 	\let\pgfmathfloat@loc@TMPb=\pgfmathresult
@@ -1651,15 +1676,20 @@
 % A modification of \pgfmathfloatmod@ where #3 = 1/#2 is already
 % known. This may be faster.
 \def\pgfmathfloatmodknowsinverse@#1#2#3{%
-	\begingroup
-	\pgfmathfloatmultiply@{#1}{#3}%
-	\pgfmathfloatint@{\pgfmathresult}%
-	\let\pgfmathfloat@loc@TMPa=\pgfmathresult
-	\pgfmathfloatmultiply@{\pgfmathfloat@loc@TMPa}{#2}%
-	\let\pgfmathfloat@loc@TMPb=\pgfmathresult
-	\pgfmathfloatsubtract@{#1}{\pgfmathfloat@loc@TMPb}%
-	\pgfmath@smuggleone\pgfmathresult
-	\endgroup
+	\pgfmathfloatmod@{#1}{#2}%
+	%--------------------------------------------------
+	% \begingroup
+	% % FIXME : is this function correct? \pgfmathfloatmod had a
+	% % rounding flaw...
+	% \pgfmathfloatmultiply@{#1}{#3}%
+	% \pgfmathfloatint@{\pgfmathresult}%
+	% \let\pgfmathfloat@loc@TMPa=\pgfmathresult
+	% \pgfmathfloatmultiply@{\pgfmathfloat@loc@TMPa}{#2}%
+	% \let\pgfmathfloat@loc@TMPb=\pgfmathresult
+	% \pgfmathfloatsubtract@{#1}{\pgfmathfloat@loc@TMPb}%
+	% \pgfmath@smuggleone\pgfmathresult
+	% \endgroup
+	%-------------------------------------------------- 
 }
 \let\pgfmathfloatmodknowsinverse=\pgfmathfloatmodknowsinverse@
 
@@ -1756,7 +1786,7 @@
 
 \def\pgfmathfloatatan@#1{%
 	\begingroup
-	\expandafter\ifx\csname pgfmathfloatatan@TMP\endcsname\relax%
+	\expandafter\ifx\csname pgfmathfloatatan@TMP\endcsname\relax% 
 		\pgfmathfloatcreate{1}{1.6}{4}%
 		\global\let\pgfmathfloatatan@TMP=\pgfmathresult
 		\pgfmathfloatcreate{2}{1.6}{4}%
@@ -1802,7 +1832,7 @@
 	\fi
 	%
 	\ifnum\pgfmathfloat@a@E<-3 %
-		\ifnum\pgfmathfloat@b@S=2 %
+		\ifnum\pgfmathfloat@b@S=2 % 
 			% #2 < 0
 			\pgfmathfloatcreate{1}{1.8}{2}% +180
 		\else
@@ -1846,7 +1876,7 @@
 		\pgfmathfloat@scale@deg@to@rad\pgfmathresult
 	\fi
     \pgfmath@smuggleone\pgfmathresult%
-  \endgroup%
+  \endgroup%    
 }%
 \let\pgfmathfloatatantwo@=\pgfmathfloatatantwo
 \expandafter\let\csname pgfmathfloatatan2\endcsname=\pgfmathfloatatantwo
@@ -1911,7 +1941,7 @@
 %
 % This allows numbers such at 10000000 or 5.23e-10 to be represented
 % properly, although TeX-registers would produce overflow/underflow
-% errors in these cases.
+% errors in these cases. 
 %
 % The natural logarithm is computed using log(X*10^Y) = log(X) + log(10)*Y
 %
@@ -1947,7 +1977,7 @@
 
 % Computes exp(#1) in floating point.
 %
-% The algorithm employs the identity
+% The algorithm employs the identity 
 %  exp(x) = exp(x - log(10^k) + log(10^k)
 %         = 10^k exp( x - k*log 10 )
 % with k choosen such that exp( x - k*log10) can be computed with the
@@ -2114,12 +2144,12 @@
 	\else
 		\pgfmathfloatgetflags{#1}\c@pgfmath@counta
 		\ifnum0=\c@pgfmath@counta
-			% ah: 0^x
+			% ah: 0^x 
 			\pgfmathfloatgetflags{#2}\c@pgfmath@counta
 			\ifnum0=\c@pgfmath@counta
 				% ah: 0^0
 				\pgfmathfloatcreate{1}{1.0}{0}%
-			\else
+			\else	
 				% ah: 0^x with x!=0:
 				\pgfmathfloatcreate{0}{0.0}{0}%
 			\fi
@@ -2179,7 +2209,7 @@
 \pgfmathfloat@definemethodfrombasic@NOARG{rnd}
 \pgfmathfloat@definemethodfrombasic@NOARG{false}
 \pgfmathfloat@definemethodfrombasic@NOARG{true}
-% arcsin, arccos
+% arcsin, arccos 
 \pgfmathfloat@definemethodfrombasic@ONEARG{asin}
 \pgfmathfloat@definemethodfrombasic@ONEARG{acos}
 \pgfmathfloat@definemethodfrombasic@ONEARG{not}
