@@ -19,7 +19,7 @@
 % with the deployment of this patch or partial content of PGF. Note that the author and/or maintainer of pgfplots has no obligation to fix anything:
 % This file comes without any warranty as the rest of pgfplots; there is no obligation for help.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% Date of this copy: Di 30. Dez 15:31:24 CET 2014 %%%
+%%% Date of this copy: Fr 10. Nov 17:18:26 CET 2017 %%%
 
 
 
@@ -95,7 +95,7 @@
 %   [FLAGS] MANTISSE EXPONENT
 % meaning
 %   [+-]X.XXXXXXX*10^C
-% where
+% where 
 %   X.XXXXXX is a mantissa with first number != 0, C is an integer and
 % FLAGS contains the sign and some other special cases.
 %
@@ -103,7 +103,7 @@
 % computation is COMPLETELY STRING BASED.
 % This allows numbers such at 10000000 or 5.23e-10 to be represented
 % properly, although TeX-registers would produce overflow/underflow
-% errors in these cases.
+% errors in these cases. 
 %
 % It is to be used to compute logs, because log(X*10^Y) = log(X) + log(10)*Y
 %
@@ -124,7 +124,7 @@
 % where
 % FLAGS is a number in [0-5] where
 % 		0 == '0' (the number is +- 0.0),
-% 		1 == '+',
+% 		1 == '+', 
 % 		2 == '-',
 % 		3 == 'not a number'
 % 		4 == '+ infinity'
@@ -419,7 +419,7 @@
 
 % Converts a float to an integer (in integer format).
 %
-% @see \pgfmathfloatint
+% @see \pgfmathfloatint 
 \def\pgfmathfloattoint#1{%
 	\pgfmathfloattofixed{#1}%
 	\expandafter\pgfmathfloattoint@@\pgfmathresult\relax
@@ -521,7 +521,7 @@
 }
 
 
-% Overloaded method.
+% Overloaded method. 
 %
 % This variant always uses a FIXED number behind the period and fills
 % in zeros if necessary.
@@ -707,7 +707,7 @@
 		% \else
 		% 	\pgfmath@error{INTERNAL ERROR in fixed style - The input sequence did not terminate as expected; which indicates a wrong exponent argument provided to \string\pgfmathprintnumber@fixed@style}{}%
 		% \fi
-		%--------------------------------------------------
+		%-------------------------------------------------- 
 		\let\pgfmathprintnumber@fixed@styleDEFAULT@impl@noperiod@NEXT=\relax
 	\fi
 	\pgfmathprintnumber@fixed@styleDEFAULT@impl@noperiod@NEXT
@@ -782,7 +782,7 @@
 % Arguments:
 % #1#2#3e#4\relax
 
-% Input:
+% Input: 
 % #1  the fixed point number to be displayed (maybe a macro).
 % #2#3e#4:  the (possibly unformatted) floating point representation
 %     which belongs to #1. This format is returned (only!) by
@@ -791,7 +791,7 @@
 \let\pgfmathprintnumber@fixed@style=\pgfmathprintnumber@fixed@styleDEFAULT
 
 
-% Rounds a normalized floating point number to \pgfmathfloat@round@precision
+% Rounds a normalized floating point number to \pgfmathfloat@round@precision 
 % digits precision and writes the result to \pgfmathresult.
 %
 % This method uses \pgfmathroundto for the mantissa.
@@ -836,7 +836,7 @@
 % #2: mantissa
 % #3: exponent
 % #4: CODE to display if the mantissa is drawn.
-% 	This code will be shown just before the exponent.
+% 	This code will be shown just before the exponent. 
 % 	Example: #4=\cdot
 % #5: CODE to display if the mantissa is NOT draw. (unused currently)
 % 	Might be used to display '10^1' instead of '1*10^1'.
@@ -1160,7 +1160,7 @@
 		\if0\pgfmathprintnumber@RELATIVE@choice@roundtofixed
 			% relative round mode=mantissa
 			\def\b@round@fixed{0}%
-		\else
+		\else 
 			\if1\pgfmathprintnumber@RELATIVE@choice@roundtofixed
 				% relative round mode=fixed
 				\def\b@round@fixed{1}%
@@ -1196,7 +1196,7 @@
 		\fi
 		\edef\pgfmathresultX{%
 			\the\pgfmathfloat@a@S
-			\the\pgfmathfloat@a@Mtok
+			\the\pgfmathfloat@a@Mtok 
 			\ifpgfmathfloatroundhasperiod\else.0\fi
 			e\the\pgfmathfloat@a@E}%
 		% call another formatter for the result (but avoid rounding inside of it):
@@ -1235,7 +1235,7 @@
 	\fi
 	\edef\pgfmathresultX{%
 		\the\pgfmathfloat@a@S
-		\the\pgfmathfloat@a@Mtok
+		\the\pgfmathfloat@a@Mtok 
 		\ifpgfmathfloatroundhasperiod\else.0\fi
 		e\the\pgfmathfloat@a@E}%
 	\let\pgfmathfloat@round@precision@orig=\pgfmathfloat@round@precision
@@ -1691,7 +1691,7 @@
 	\endgroup
 	\let#3=\pgfmathfloat@glob@TMP
 }%
-
+	
 
 % Changes the current number pretty printer to #1.
 %
@@ -1705,7 +1705,7 @@
 \pgfkeys{/pgf/number format/std}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
-%
+% 
 % IMPL
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1747,7 +1747,7 @@
 
 % \pgfmathroundto implementation in WORDS:
 %
-% coarse idea:
+% coarse idea: 
 %    1. collect all digits/sign BEFORE the first period in REVERSE order
 %    2. then, collect UP TO \prec digits after the period in REVERSE order
 % Steps 1. and 2. lead to the digit [sign] sequence
@@ -1781,7 +1781,7 @@
 %   		fi
 %   		++q
 %   		if q=0
-%   			discard the period
+%   			discard the period 
 %   		fi
 %   	end while
 %   	if q = r+1
@@ -1858,7 +1858,7 @@
 		\fi
 	\fi
 }
-
+			
 % takes the current input and decides whether trailing zeros shall be
 % discarded or more zeros need to be filled in.
 \def\pgfmathroundto@impl@finish@with@truncation{%
@@ -1991,7 +1991,7 @@
 	\fi
 }
 
-% PRECONDITION:
+% PRECONDITION: 
 %    \c@pgfmathroundto@lastzeros > 0
 \def\pgfmathroundto@impl@discard@suffix@zeros@ITERATE#1{%
 	\advance\c@pgfmathroundto@lastzeros by-1
@@ -2183,7 +2183,7 @@
 		% 	\pgfmathfloattofixed@impl@collectmantissa#2\count\pgfmathfloat@a@E
 		% 	\edef\pgfmathresult{\the\pgfmathfloat@a@Mtok}%
 		% \fi
-		%--------------------------------------------------
+		%-------------------------------------------------- 
 		\pgfmathfloat@a@Mtok{#1}%
 		\pgfmathfloattofixed@impl@pos#2000000000\pgfmathfloat@EOI
 		\edef\pgfmathresult{\the\pgfmathfloat@a@Mtok}%
