@@ -3425,6 +3425,12 @@
 			\pgfplotscoordmath{meta}{parsenumber}{0}%
 		\fi
 	}%
+	\pgfmathdeclarefunction{thisrow}{1}{%
+		\getthisrow{##1}\pgfmathresult
+	}%
+	\pgfmathdeclarefunction{thisrowno}{1}{%
+		\getthisrowno{##1}\pgfmathresult
+	}%
 	%
 	% %%%%%%%%%%%%%%
 	%
@@ -6720,14 +6726,14 @@
 	\let\pgfplotstable@coordindex@old=\coordindex
 	\def\coordindex{\pgfplotstablerow}%
 	\def\lineno{\coordindex}% is the same here
-	% These macros are-unfortunately- not accessable here. And the
+	% The normal implementation of \thisrow is not accessable here. And the
 	% worst is: error messages are impossible either because they are
-	% not executed... try to provide useful hints:
-	\def\thisrow##1{thisrow_unavailable_load_table_directly}%
-	\def\thisrowno##1{thisrowno_unavailable_load_table_directly}%
+	% not executed... we resort to the associated math functions:
+	\def\thisrow##1{thisrow("##1")}% let us hope that math parsing is active!
+	\def\thisrowno##1{thisrowno(##1)}%
 	% this should work.
-	\def\getthisrow##1##2{\pgfplotstablegetelem{\coordindex}{##1}\of{#3}{##2}}%
-	\def\getthisrowno##1##2{\pgfplotstablegetelem{\coordindex}{[index]##1}\of{#3}{##2}}%
+	\def\getthisrow##1##2{\pgfplotstablegetelem{\coordindex}{##1}\of{#3}\let##2=\pgfplotsretval}%
+	\def\getthisrowno##1##2{\pgfplotstablegetelem{\coordindex}{[index]##1}\of{#3}\let##2=\pgfplotsretval}%
 	%
 	\expandafter\pgfplotstablegetcolumnbyname\expandafter{\pgfplots@plot@tbl@x}\of#3\to\addplot@tbl@x
 	\expandafter\pgfplotstablegetcolumnbyname\expandafter{\pgfplots@plot@tbl@y}\of#3\to\addplot@tbl@y
