@@ -1,3 +1,7 @@
+2017-11-10 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
+
+	- fixed bug: #109 `visualization depends on` doesn't work with table from pgfplotstable 
+
 2017-11-03 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
 
 	- feature #69 parse tick positions using math parser
